# rust-chessbot

./: .gitignore  Cargo.toml  compareRef.sh  launch_ai.sh  wrap_stockfish.sh
bitboard/: Cargo.toml
bitboard/src/: lib.rs
bitboard/src/patterns/: mod.rs
bitboard/src/patterns/knight/: mod.rs
bitboard/src/patterns/pawn/: mod.rs
chessengine/: Cargo.toml
chessengine/resources/perft_files/: forbidden_castling-depth_4.perft  forbidden_castling-depth_5.perft
chessengine/src/: main.rs
chessengine/src/chessai/: mod.rs
chessengine/src/chessai/evaluation/: mod.rs
chessengine/src/chessai/evaluation/basic/material/: mod.rs
chessengine/src/chessai/search/: mod.rs
chessengine/src/chessai/search/alpha_beta/: mod.rs
chessengine/src/chessai/search/negamax/: mod.rs
chessengine/src/chessai/uci/: mod.rs
chessengine/src/chessboard/: mod.rs
chessengine/src/chessboard/moves/: mod.rs
chessengine/src/chessboard/moves/piece/: mod.rs
chessengine/src/chessboard/moves/piece/king/: mod.rs
chessengine/src/chessboard/moves/piece/knight/: mod.rs
chessengine/src/chessboard/moves/piece/pawn/: mod.rs
chessengine/src/chessboard/moves/piece/sliding_piece/: mod.rs
chessengine/src/chessboard/moves/piece/sliding_piece/bishop/: mod.rs
chessengine/src/chessboard/moves/piece/sliding_piece/queen/: mod.rs
chessengine/src/chessboard/moves/piece/sliding_piece/rook/: mod.rs
chessengine/src/chessboard/perft/: mod.rs
utils/src/: color.rs  direction.rs  file.rs  lib.rs  piece.rs  rank.rs  square.rs
